tests/golden/type_errors/generic_uninferred_type_parameter.cd
fun make<T>(): T? { return nil; }
make();
